--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
     "gulp-rev-replace": "^0.4.4",
     "browser-sync": "^2.26.5",
     "babel-eslint": "^10.0.1", 
-    "prettier": "^1.17.1",
+    "prettier": "^1.17.1"
   }
 }
